fix: wrong placement of the language property.

--- a/templates/template-post.html
+++ b/templates/template-post.html
@@ -1,10 +1,10 @@
 {% macro translate(text) %}
-{% if not options.i18n[options.settings.language] %}
+{% if not options.i18n[settings.language] %}
     {{ text }}
-{% elif not options.i18n[options.settings.language][text] %}
+{% elif not options.i18n[settings.language][text] %}
     {{ text }}
 {% else %}
-    {{ options.i18n[options.settings.language][text] }}
+    {{ options.i18n[settings.language][text] }}
 {% endif %}
 {% endmacro %}
 
